<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="data"
            type="com.example.urbandictionary.model.Definition"
            />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/search_edittext"
        android:layout_width="@dimen/dimen0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginStart="@dimen/dimen64"
        android:layout_marginEnd="@dimen/dimen64"
        android:background="@drawable/rounded_edittext"
        android:maxLines="1"
        android:textColor="@color/colorBlack"
        android:hint="@string/search_any"
        android:drawableStart="@drawable/ic_search_gray_24dp"
        android:drawablePadding="@dimen/dimen4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:textStyle="bold"
        android:text="@string/search"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sort_textview"
        app:layout_constraintTop_toBottomOf="@id/search_edittext"
        app:layout_constraintBottom_toTopOf="@id/items_recyclerview"
        />

    <TextView
        android:id="@+id/sort_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text16"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/search_button"
        app:layout_constraintEnd_toStartOf="@id/sort_spinner"
        app:layout_constraintTop_toTopOf="@id/sort_spinner"
        app:layout_constraintBottom_toBottomOf="@id/sort_spinner"
        />

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edittext"
        app:layout_constraintBottom_toTopOf="@id/items_recyclerview"
        />

    <ProgressBar
        android:id="@+id/loading_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:progressDrawable="@drawable/progress_bar_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        app:layout_constraintBottom_toBottomOf="@id/items_recyclerview"

        />

        <TextView
            android:id="@+id/noresults_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen256"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text48"
            android:text="@string/no_results"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_recyclerview"
        android:layout_width="@dimen/dimen0"
        android:layout_height="@dimen/dimen0"
        android:layout_marginTop="@dimen/dimen32"
        android:layout_marginBottom="@dimen/dimen64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />


        <TextView
            android:id="@+id/title_textview"
            android:layout_width="@dimen/dimen0"
            android:layout_height="@dimen/dimen0"
            android:letterSpacing="0.2"
            android:fontFamily="@font/bangers_regular"
            android:textSize="@dimen/text32"
            android:gravity="top|center_horizontal"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/bottom_title"
            app:layout_constraintTop_toBottomOf="@id/items_recyclerview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/android_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen8"
            android:src="@drawable/ic_adb_purple_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/android_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen8"
            android:src="@drawable/ic_adb_purple_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_textview"
            app:layout_constraintBottom_toBottomOf="parent"
            />




</androidx.constraintlayout.widget.ConstraintLayout>

</layout>